--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,10 @@ body {
   transition: all 0.3s;
 }
 
+#header .header__nav.is-slideup {
+  top: -120% !important;
+}
+
 /* --------
 フッター
 -------- */
@@ -1227,7 +1231,7 @@ Thanksページ
 }
 @media screen and (max-width: 767px) {
   .confirm .sns__message {
-    font-size: 13px;
+    font-size: 14px;
     margin-top: 15px;
   }
 }
@@ -3591,6 +3595,7 @@ messageページ
   justify-content: center;
   align-items: center;
   text-align: center;
+  transition: 0.7s;
 }
 
 .fv__inner.done.panelactive .fv__nav {
@@ -3668,6 +3673,10 @@ messageページ
 }
 .fv__inner.done.panelactive .fv__nav .fv__sns img {
   margin-left: 0;
+}
+
+.fv__inner .fv__nav.is-slideup {
+  top: -120% !important;
 }
 
 section {
