--- a/css/style.css
+++ b/css/style.css
@@ -594,7 +594,6 @@ body {
   width: 150px;
   height: 3px;
   margin: 0;
-  border-radius: 10px;
   cursor: pointer;
   background: #FFE9D8;
 }
@@ -610,7 +609,6 @@ body {
 }
 
 .slick-dots .slick-active {
-  border-radius: 10px;
   background: #FFBE98;
   cursor: pointer;
 }
@@ -630,6 +628,10 @@ body {
   color: black;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+li.slick-active {
+  border-radius: 10px;
 }
 
 .slick-prev:before,
