--- a/css/_common.scss
+++ b/css/_common.scss
@@ -5,9 +5,9 @@
 /* ------------
 全ページ共通のcss
 // ------------- */
-// * {
-//   outline: 2px solid blue;
-// }
+* {
+  outline: 2px solid blue;
+}
 
 body {
   display: none;
