--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,8 @@ color
   color: #5E2F2A;
   text-decoration: none;
   transition: 0.3s;
+}
+.page__link .page__item a:hover {
   opacity: 1;
 }
 @media screen and (max-width: 767px) {
@@ -410,10 +412,6 @@ img {
 /* ------------
 全ページ共通のcss
 // ------------- */
-* {
-  outline: 2px solid blue;
-}
-
 body {
   display: none;
 }
