--- a/css/_btn.scss
+++ b/css/_btn.scss
@@ -135,7 +135,12 @@
             color: variable.$text-color;
             text-decoration: none;
             transition: 0.3s;
-            opacity: 1;
+
+
+            &:hover{
+                opacity: 1;
+            }
+            
 
             @include media(md){
                 width: 100%;
