--- a/css/style.css
+++ b/css/style.css
@@ -2372,6 +2372,11 @@ works/下層ページ
   }
 }
 @media screen and (max-width: 767px) {
+  .work__desc dl dd a {
+    word-break: break-all;
+  }
+}
+@media screen and (max-width: 767px) {
   .work__desc {
     padding-top: 78px;
   }
